--- a/HticSimulateurForm/formulaires/elec-residentiel/elec-residentiel.css
+++ b/HticSimulateurForm/formulaires/elec-residentiel/elec-residentiel.css
@@ -49,7 +49,7 @@
 .simulateur-header {
     text-align: center;
     padding: 3rem 2rem;
-    background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+    background: linear-gradient(135deg, #222F46 0%, #57709d 100%);
     color: white;
     border-radius: var(--radius-xl);
     margin-bottom: 2rem;
@@ -67,6 +67,7 @@
     font-size: 2.5rem;
     font-weight: 700;
     letter-spacing: -0.025em;
+    color: white;
 }
 
 .simulateur-header p {
